--- a/module/dialogs/configuration.less
+++ b/module/dialogs/configuration.less
@@ -7,11 +7,12 @@
   }
   
   fieldset {
-    margin: .5em 10px;
+    margin-top: .5em;
+    padding: 0;
     
     ol {
       list-style: none;
-      padding: 1px 10px;
+      padding: 1px 0 0 10px;
     }
     li {
       margin: .5em 0;
@@ -25,8 +26,8 @@
     }
     
     input {
-      margin: 0;
-      width: 300px;
+      margin: 0 -10px 0;
+      width: 385px;
     }
   }
   
