Add service checkboxes to extraction dialog.

--- a/module/dialogs/dialogs.less
+++ b/module/dialogs/dialogs.less
@@ -22,6 +22,16 @@
       width: 70px;
       float: left;
     }
+    
+    label.checkbox {
+      float: none;
+      padding-left: 15px;
+      
+      input {
+        position: absolute;
+        margin: 1px 0 0 -15px;
+      }
+    }
   }
   
   legend {
