Add start button to extraction dialog.

--- a/module/dialogs/dialogs.less
+++ b/module/dialogs/dialogs.less
@@ -3,6 +3,11 @@
     font-weight: bold;
     float: right;
   }
+  button[disabled] {
+    color: gray;
+    border-color: #BBB !important;
+    cursor: default;
+  }
   
   fieldset {
     margin-top: .5em;
