--- a/module/dialogs/dialogs.less
+++ b/module/dialogs/dialogs.less
@@ -16,6 +16,7 @@
     ol {
       list-style: none;
       padding: 1px 0 0 10px;
+      margin-bottom: .7em;
     }
     li {
       margin: .5em 0;
