--- a/module/dialogs/configuration.less
+++ b/module/dialogs/configuration.less
@@ -10,6 +10,14 @@
   }
   
   fieldset {
+  	.documentation {
+  	  padding-left: 3px;
+  	  font-weight: normal;
+  	  font-style: italic;
+  	  font-size: 90%;
+  	  color: #666;
+  	}
+  	
     li {
       margin: .3em 0;
     }
