Separate configuration of service and extraction settings.

--- a/module/dialogs/extraction.less
+++ b/module/dialogs/extraction.less
@@ -10,3 +10,22 @@ label.disabled {
 	color: #999;
   }
 }
+
+ol.settings {
+  font-size: 0.9em;
+
+  li {
+    margin: 0 !important;
+  }
+  label {
+    display: inline-block;
+    float: none;
+    min-width: 90px;
+    margin-left: 20px;
+    padding-top: 4px;
+    text-align: right;
+  }
+  input {
+    width: 80px !important;
+  }
+}
